example/apps/kubeflow/auth_ns.yaml
# -----------------------------
#
# This file is generated during Terraform apply.
# Please refer to module sak-kubeflow:
#   https://github.com/RustamGimadiev/sak-kubeflow
# to make changes to this file.
#
# -----------------------------
"apiVersion": "v1"
"kind": "Namespace"
"metadata":
  "annotations":
    "argocd.argoproj.io/sync-wave": "-1"
  "name": "auth"
